Spring Pet Clinic - Upgrading to Java 11